# stock-market-lib

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  bitbucket-pipelines.yml  docker-compose-dev.yml  docker-compose.yml  noxfile.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
data/: DIA.csv  EUE.MI.csv  EXSA.DE.csv  IWD.csv  IWF.csv  IWM.csv  PHYS.csv  QQQ.csv  SH.csv  SPY.csv  VOO.csv
stock_market/common/: empty_json_mixin.py  factory.py  single_attribute_json_mixin.py
stock_market/core/: __init__.py  ohlc.py  stock_market.py  stock_updater.py  ticker.py  ticker_ohlc.py  time_series.py
stock_market/core/signal/: __init__.py  sentiment.py  signal.py  signal_detector.py  signal_sequence.py
stock_market/ext/fetcher/: __init__.py  proxy_ohlc_fetcher.py  register.py  yahoo_ohlc_fetcher.py
stock_market/ext/indicator/: __init__.py  exponential_moving_average.py  identity.py  moving_average.py  register.py
stock_market/ext/signal/: __init__.py  bi_monthly_signal_detector.py  crossover_signal_detector.py  death_cross_signal_detector.py  golden_cross_signal_detector.py  graph_signal_detector.py  monthly_signal_detector.py  register.py  ticker_signal.py
stock_market/ext/updater/: __init__.py  (+3 more)
stock_market_engine/: engine.py
stock_market_engine/api/: common.py  config.py  engine.py  main.py  models.py  redis.py  signal_api.py  stock_market_api.py
stock_market_engine/common/: factory.py  utils.py
stock_market_engine/core/: __init__.py  engine.py  ohlc.py  stock_market.py  stock_updater.py  ticker.py  ticker_ohlc.py  time_series.py
stock_market_engine/graphs/: time_series_ema_graph.py  time_series_graph.py
stock_market_engine/signals/: fixed_interval_signal.py  signal_detector_factory.py
stock_market_engine/updaters/: stock_updater_factory.py  yahoo_finance_stock_updater.py
tests/api/: test_engine.py
tests/common/: test_factory.py
tests/core/: test_engine.py  test_ohlc.py  test_stock_market.py  test_stock_updater.py  test_ticker.py  test_ticker_ohlc.py  test_time_series.py
tests/graphs/: test_time_series_ema_graph.py  test_time_series_graph.py
tests/signals/: test_bi_monthly_signal_detector.py  test_fixed_interval_signal.py  test_fixed_interval_signal_factory.py  test_monthly_signal_detector.py  test_signal_detector_factory.py
tests/updaters/: test_yahoo_finance_stock_updater.py
(+41 files in other folders)
