[metadata]
name = stock-market-lib
version = v0.1
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://bitbucket.org/MattiasDC/{name}
platform = any

[options]
python_requires = >= 3.9
include_package_data = True
packages = find:
install_requires =
    dateparser
    jsonschema
    pandas
   	py-utils @ git+https://bitbucket.org/MattiasDC/py-utils.git@master
   	toolz
    yahoo-fin

[options.packages.find]
exclude =
    tests
    tests.*