[metadata]
name = stock-market-lib
version = v0.1
author = Mattias De Charleroy
author_email = mattias.decharleroy@gmail.com
url = https://bitbucket.org/MattiasDC/{name}
platform = any

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
install_requires =
    aiohttp
    dateparser
    jsonschema[format]
    numpy
    pandas
    python-dateutil
   	py-utils @ git+https://bitbucket.org/MattiasDC/py-utils.git@master
    sorcery
   	toolz
    transitions
    yahoo-fin

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    aioresponses
    black
    flake8
    isort
    pytest
    pytest-asyncio
    nox
    pre-commit
    pytest
    yamllint

[flake8]
max-line-length = 88
exclude =
    .env
    .nox
    *.egg-info

[isort]
profile = black
skip =
    .env
    .nox
    *.egg-info

[tool:pytest]
asyncio_mode = auto
filterwarnings = 
    ignore:The localize method is no longer necessary, as this time zone supports the fold attribute